# video-censor

./: .gitignore  ANTIGRAVITY_ENHANCEMENT_PROMPT.md  CHANGELOG.md  CLAUDE.md  DEVELOPER_RESOURCES_INDEX.md  LICENSE  README.md  RESOURCE_MAPPING.md  RUN.md  VideoCensor-windows.spec  VideoCensor.spec  build.sh  build_windows.bat  censor_video.py  config.yaml  config.yaml.example  inject_goonies.py  installer.iss  main.py  pyproject.toml  requirements.txt  test_renderer.py  video_censor_gui.py
migrations/: 001_community_tables.sql  002_user_preferences.sql  002_user_sync.sql
tests/: check_error_style.py  test_async_sync.py  test_audio_extractor.py  test_cloud_db.py  test_confidence_merger.py  test_config.py  test_content_lookup.py  test_context_analyzer.py  test_data_structures.py  test_error_handler.py  test_feedback_presets_sync_telemetry.py  test_full_ui_integration.py  test_intervals.py  test_keyframes.py  test_notifications.py  test_notifier.py  test_planner.py  test_preferences.py  test_profanity.py  test_profanity_enhanced.py  test_profile_manager.py  test_progress.py  test_project.py  test_quality_config.py  test_queue_item.py  test_renderer.py  test_scene_detector.py  test_serializer.py  test_severity.py  test_sexual_content.py  test_sexual_content_phase2.py  test_subtitles.py  test_summary.py  test_ui_verification.py  test_undo_manager.py  test_utilities.py  test_validator.py  test_waveform_and_extractor.py  test_whitelist.py  verify_error_handling.py  (+3 more)
ui/: __init__.py  detection_browser.py  editor_panel.py  editor_timeline.py  error_dialog.py  main_window.py  player.py  preferences_dialog.py  profile_dialog.py  review_panel.py  search_tab.py  setup_wizard.py  styles.py  timeline.py
video_censor/: __init__.py  __main__.py  cli.py  config.py  (+22 more)
(+57 files in other folders)
