[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-censor"
version = "1.0.0"
description = "A fully local, offline video editing tool that automatically detects and censors profanity, nudity, and objectionable content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ryan Conwell"}
]
keywords = ["video", "censor", "profanity", "nudity", "content-filter", "parental-controls"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "nudenet>=3.4.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "PySide6>=6.6.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
video-censor = "video_censor.cli:main"

[project.gui-scripts]
video-censor-gui = "main:main"

[project.urls]
Homepage = "https://github.com/Rconman99/video-censor"
Repository = "https://github.com/Rconman99/video-censor.git"
Issues = "https://github.com/Rconman99/video-censor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_censor*", "ui*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt"]
